syntax = "proto3";

package hello;

// protoc -I. --plugin=protoc-gen-micro=%GOPATH%/bin/protoc-gen-micro-v3.exe --micro_out=./ --go_out=./ ./proto/hello/hello.proto
option go_package = "./proto/hello";

service HelloWorld {
  rpc Call(CallRequest) returns (CallResponse) {}
}

message CallRequest {
  string name = 1;
}

message CallResponse {
  string msg = 1;
}
